# headwater

./: .envrc  .gitignore  CLAUDE.md  README.md  hw.py  pyproject.toml
.claude/: settings.local.json
docs/: backlog.md
docs/plans/: 2026-03-07-openai-compat-endpoint-design.md  2026-03-07-openai-compat-endpoint-plan.md  2026-03-10-bywater.md  2026-03-13-logging-design.md  2026-03-13-logging-plan.md  2026-03-30-headwater-router-design.md  2026-03-30-headwater-router.md  2026-04-06-headwater-observability.md  (+5 more)
headwater-api/: pyproject.toml
headwater-client/: pyproject.toml  smoke_test.py
headwater-client/docs/: SMOKE.md
headwater-client/src/headwater_client/: __main__.py
headwater-client/src/headwater_client/api/: base_api.py  base_async_api.py  conduit_api.py  conduit_async_api.py  curator_api.py  curator_async_api.py  embeddings_api.py  embeddings_async_api.py  openai_async_api.py  reranker_api.py  reranker_async_api.py  siphon_api.py  siphon_async_api.py  siphon_sync_api.py
headwater-client/src/headwater_client/client/: headwater_client.py  headwater_client_async.py
headwater-client/src/headwater_client/transport/: headwater_async_transport.py  headwater_transport.py
headwater-client/tests/: test_conduit.py  test_siphon_extract_batch_client.py  test_tokenize.py
headwater-client/tests/api/: test_openai_async_api.py
headwater-client/tests/client/: test_clients.py
headwater-client/tests/transport/: test_async_transport.py  test_transport.py
headwater-server/: pyproject.toml
scripts/: deploy.sh
tests/: test_openai_compliance.py
(+167 files in other folders)
